wait for visibility fix

--- a/interface/styles.css
+++ b/interface/styles.css
@@ -86,3 +86,5 @@ span.des{
 .addToRow{
     width:100px !important;
 }
+.tab{
+}
